--- a/page-js.html
+++ b/page-js.html
@@ -1,16 +1,503 @@
 <script>
   let authLink = document.getElementById("auth");
-  let button2 = document.getElementById("btn2");
+  let authDiv = document.getElementById("authenticate");
+  let searchButton = document.getElementById("searchButton");
+  let searchBar = document.getElementById("searchTerm");
+  let resultBox = document.getElementById("resultBox");
+  let searchBox = document.querySelector(".searchBox");
+  let table = document.getElementById("applications");
+  let newApplicationButton = document.getElementById("plus");
+  let newSchoolSearchBox = document.getElementById("schoolSearch");
+  let schoolToSearch = document.getElementById("schoolName");
+  let schoolSearchButton = document.getElementById("findSchool");
+  let schoolResults = document.getElementById("schoolResults");
+  let pushToSalesforce = document.getElementById("push");
+  let contactArray = [];
+  let applicationTable = [];
+  let selected;
+  let contact;
+
+  // Gets the OAuth2 link
   google.script.run.withSuccessHandler(callback).showSidebar();
 
-  button2.addEventListener("click", () => {
-    google.script.run.withSuccessHandler(callback2).makeRequest();
+  // Makes request after verification
+  searchButton.addEventListener("click", () => {
+    killTheKids(resultBox);
+    let searchTerm = searchBar.value;
+    console.log(searchTerm);
+    google.script.run.withSuccessHandler(printResults).makeRequest(searchTerm, "search", "Contact");
   })
   
+  // Cosmetic change to the new application button
+  plus.addEventListener("click", () => {
+    newSchoolSearchBox.style.display = "block";
+    plus.style.display = "none";
+  })
+
+  // Calls GAS to send an API request to SF
+  schoolSearchButton.addEventListener("click", () => {
+    schoolResults.style.display = "block";
+    let schoolSearchTerm = schoolToSearch.value;
+    schoolToSearch.value = "";
+    showSpinner();
+    google.script.run.withSuccessHandler(printSchoolResults).makeRequest(schoolSearchTerm, "search", "Account", "0123h000000tvrfAAA");
+  })
+
+  // Pushes data to Salesforce
+  push.addEventListener("click", () => {
+    console.log("clicked push")
+    updateApplicationTable();
+  })
+
+  function updateApplicationTable() {
+    console.log(applicationTable);
+    for (let i = 0; i < table.rows.length - 2; i++) {
+      let dueDate = document.getElementById("dueDate" + i);
+      let submitted = document.getElementById("submitted" + i);
+      let appType = document.getElementById("appType" + i);
+      let commonApp = document.getElementById("commonApp" + i);
+      let supplementals = document.getElementById("supplementals" + i);
+      let testing = document.getElementById("testing" + i);
+      let act = document.getElementById("act" + i);
+      let sat = document.getElementById("sat" + i);
+      let testOptional = document.getElementById("testOptional" + i);
+      let actWriting = document.getElementById("testOptional" + i);
+      let transcripts = document.getElementById("transcripts" + i);
+      let letters = document.getElementById("letters" + i);
+      let fafsa = document.getElementById("fafsa" + i);
+      let css = document.getElementById("css" + i);
+      let portfolio = document.getElementById("portfolio" + i);
+      let link = document.getElementById("link" + i);
+      let result = document.getElementById("result" + i);
+      //0 [result.records[i].Id,
+      //1 result.records[i].Institution__c,
+      //2  result.records[i].Due_Date__c,
+      //3   result.records[i].Submitted__c,
+      //4    contactArray[selected].Completed_Common_App_Essay__c,
+      //5     result.records[i].Supplemental_Essays_Completed__c,
+      //6      result.records[i].Testing_Sent__c,
+      //7       result.records[i].Transcripts_Sent__c,
+      //8        result.records[i].LOR_Sent__c,
+      //9         result.records[i].FAFSA_Sent__c,
+      //10          result.records[i].CSS_Profile_Sent__c,
+      //11           result.records[i].Portfolio_Sent__c,
+      //12            result.records[i].Portfolio_Instructions__c,
+      //13             result.records[i].Outcome__c,
+      //14              result.records[i].Application_Type__c,
+      //15               result.records[i].Institution__r.Name]
+      applicationTable[i][2] = dueDate.value;
+      applicationTable[i][3] = submitted.checked;
+      applicationTable[i][4] = commonApp.checked;
+      applicationTable[i][5] = supplementals.checked;
+      applicationTable[i][6] = handleTesting(act.checked, sat.checked, testOptional.checked, actWriting.checked);
+      applicationTable[i][7] = transcripts.checked;
+      applicationTable[i][8] = letters.checked;
+      applicationTable[i][9] = fafsa.checked;
+      applicationTable[i][10] = css.checked;
+      applicationTable[i][11] = portfolio.checked;
+      applicationTable[i][12] = link.value;
+      applicationTable[i][13] = result.value;
+      applicationTable[i][14] = appType.value;
+    }
+    console.log(applicationTable);
+    google.script.run.withSuccessHandler(confirmSubmission).pushToSalesforce(applicationTable, contactArray[selected]);
+  }
+
+function confirmSubmission(table) {
+  applicationTable = table;
+  console.log(applicationTable);
+}
+
+  function handleTesting(act, sat, testOptional, actWriting) {
+    let string = ""
+    if (act == true) {
+      string += "ACT";
+    }
+    if (sat == true) {
+      if (string.length > 0) {
+        string += ";SAT";
+      }
+      else {
+        string += "SAT";
+      }
+    }
+    if (testOptional == true) {
+      if (string.length > 0) {
+        string += ";Test Optional";
+      }
+      else {
+        string += "Test Optional";
+      }
+
+    }
+    if (actWriting == true) {
+      if (string.length > 0) {
+        string += ";ACT Writing Section";
+      }
+      else {
+        string += "ACT Writing Section";
+      }
+    }
+    return string;
+  }
+
+  function printSchoolResults(schools) {
+    hideSpinner();
+    console.log(schools);
+    // Add schools to school results and add event listener to all to use as options to create a new application from
+    for (let i = 0; i < schools.length; i++) {
+      let name = schools[i].Name;
+      let website = schools[i].Website;
+      let city = schools[i].BillingCity;
+      let state = schools[i].BillingState;
+      let id = schools[i].Id;
+      printSchool(name, website, city, state, id);
+    }
+    let resultsList = document.querySelectorAll(".schoolItem").forEach(school => {
+      school.addEventListener("click", () => {
+        killTheKids(school);
+        applicationTable.push(["",school.id,"","","","","","","","","","","","", "", school.getAttribute("name")]);
+        killTheKids(schoolResults);
+        printTable(applicationTable, "row")
+        schoolResults.style.display = "none"
+        newSchoolSearchBox.style.display = "none";
+        newApplicationButton.style.display = "block";
+
+      })
+    })
+  }
+
+  function printSchool(name, website, city, state, id) {
+    console.log(name, website, city, state);
+
+    let div = document.createElement("div");
+    div.classList.add("schoolItem");
+    div.id = id;
+    div.setAttribute("name", name)
+    div.textContent = name;
+
+    let websiteP = document.createElement("p");
+    websiteP.textContent = "Website: " + website;
+    div.appendChild(websiteP);
+
+    let cityP = document.createElement("p");
+    cityP.textContent = "City: " + city;
+    div.appendChild(cityP);
+
+    let stateP = document.createElement("p");
+    stateP.textContent = "State: " + state;
+    div.appendChild(stateP);
+
+    schoolResults.appendChild(div);
+  }
+
+  // Updates link to Salesforce Authentication
   function callback(link) {
     authLink.href = link;
+    authLink.addEventListener("click", () => {
+      authDiv.style.display = "none";
+      searchBox.style.display = "block";
+    })
   }
-  function callback2() {
-    console.log("Success");
+
+  function getAdvisor(id) {
+    switch (id) {
+      case id == "": 
+        return "Yoshi Akutsu";
+      case id == "": 
+        return "";
+      case id == "": 
+        return "";
+      case id == "": 
+        return "";
+      case id == "": 
+        return "";
+      case id == "": 
+        return "";
+    }
   }
+
+  function activateOptions() {
+    let results = document.querySelectorAll(".contact");
+    results.forEach(result => result.addEventListener("click", () => {
+      killTheKids(resultBox);
+      searchBox.style.display = "none";
+      table.style.display = "block";
+      selected = result.getAttribute("position");
+      google.script.run.withSuccessHandler(formTableData).makeRequest(result.id, "applications");
+      showSpinner();
+    }))
+  }
+
+  function formTableData(result) {
+    hideSpinner();
+    let contact = contactArray[selected];
+    for (let i = 0; i < result.records.length; i++) {
+      applicationTable.push(
+        [result.records[i].Id, result.records[i].Institution__c, result.records[i].Due_Date__c, result.records[i].Submitted__c, contactArray[selected].Completed_Common_App_Essay__c, result.records[i].Supplemental_Essays_Completed__c, result.records[i].Testing_Sent__c, result.records[i].Transcripts_Sent__c, result.records[i].LOR_Sent__c, result.records[i].FAFSA_Sent__c, result.records[i].CSS_Profile_Sent__c, result.records[i].Portfolio_Sent__c, result.records[i].Portfolio_Instructions__c, result.records[i].Outcome__c, result.records[i].Application_Type__c, result.records[i].Institution__r.Name]);
+    }
+    printTable(applicationTable);
+  }
+
+  function printTable(array, rowOption) {
+    let contact = contactArray[selected];
+    let i = 0;
+    if (rowOption == "row") {
+        i = array.length - 1;
+      } 
+    for (i; i < array.length; i++) {
+      console.log(array[i]);
+      let newRow = table.insertRow(i + 1);
+
+      let cell1 = newRow.insertCell(-1);
+      cell1.innerHTML = array[i][15];
+
+      let cell2 = newRow.insertCell(-1);
+      let child2 = document.createElement("input");
+      child2.type = "date";
+      child2.value = array[i][2]
+      child2.id = "dueDate" + i;
+      cell2.appendChild(child2);
+
+      let cell3 = newRow.insertCell(-1);
+      let child3 = document.createElement("input");
+      child3.type = "checkbox";
+      child3.checked = array[i][3]
+      child3.id = "submitted" + i;
+      cell3.appendChild(child3);
+
+      let cell14 = newRow.insertCell(-1);
+      let child14 = document.createElement("select");
+      child14.value = array[i][14]
+      child14.id = "appType" + i;
+
+      let option1a = document.createElement("option");
+      option1a.value = "Early Action";
+      option1a.text = "Early Action";
+      child14.appendChild(option1a);
+
+      let option2a = document.createElement("option");
+      option2a.value = "Early Decision";
+      option2a.text = "Early Decision";
+      child14.appendChild(option2a);
+
+      let option3a = document.createElement("option");
+      option3a.value = "Regular Decision";
+      option3a.text = "Regular Decision";
+      child14.appendChild(option3a);
+
+      let option4a = document.createElement("option");
+      option4a.value = "Restricted Early Action";
+      option4a.text = "Restricted Early Action";
+      child14.appendChild(option4a);
+
+      let option5a = document.createElement("option");
+      option5a.value = "Rolling";
+      option5a.text = "Rolling";
+      child14.appendChild(option5a);
+
+      let option6a = document.createElement("option");
+      option6a.value = "Other";
+      option6a.text = "Other";
+      child14.appendChild(option6a);
+
+      cell14.appendChild(child14);
+
+      let cell4 = newRow.insertCell(-1);
+      let child4 = document.createElement("input");
+      child4.type = "checkbox";
+      child4.checked = array[i][4]
+      child4.id = "commonApp" + i;
+      cell4.appendChild(child4);
+
+      let cell5 = newRow.insertCell(-1);
+      let child5 = document.createElement("input");
+      child5.type = "checkbox";
+      child5.checked = array[i][5]
+      child5.id = "supplementals" + i;
+      cell5.appendChild(child5);
+
+      let cell6 = newRow.insertCell(-1);
+      let child6 = document.createElement("div");
+      let testTypes = array[i][6].split(";")
+      child6.id = "testing" + i;
+
+      let act = document.createElement("input");
+      let sat = document.createElement("input");
+      let testOptional = document.createElement("input");
+      let actWriting = document.createElement("input");
+      act.type = "checkbox";
+      act.id = "act" + i;
+
+      sat.type = "checkbox";
+      sat.id = "sat" + i;
+
+      testOptional.type = "checkbox";
+      testOptional.id = "testOptional" + i;
+
+      actWriting.type = "checkbox";
+      actWriting.id = "actWriting" + i;
+
+      for (let i = 0; i < testTypes.length; i++) {
+        if (testTypes[i] == "ACT") {
+          act.checked = true;
+        }
+        if (testTypes[i] == "SAT") {
+          sat.checked = true;
+        }
+        if (testTypes[i] == "Test Optional") {
+          testOptional.checked = true;
+        }
+        if (testTypes[i] == "ACT Writing Section") {
+          actWriting.checked = true;
+        }
+      }
+      cell6.appendChild(act);
+      cell6.appendChild(sat);
+      cell6.appendChild(testOptional);
+      cell6.appendChild(actWriting);
+      cell6.appendChild(child6);
+
+      let cell7 = newRow.insertCell(-1);
+      let child7 = document.createElement("input");
+      child7.type = "checkbox";
+      child7.checked = array[i][7]
+      child7.id = "transcripts" + i;
+      cell7.appendChild(child7);
+
+      let cell8 = newRow.insertCell(-1);
+      let child8 = document.createElement("input");
+      child8.type = "checkbox";
+      child8.checked = array[i][8]
+      child8.id = "letters" + i;
+      cell8.appendChild(child8);
+
+      let cell9 = newRow.insertCell(-1);
+      let child9 = document.createElement("input");
+      child9.type = "checkbox";
+      child9.checked = array[i][9]
+      child9.id = "fafsa" + i;
+      cell9.appendChild(child9);
+
+      let cell10 = newRow.insertCell(-1);
+      let child10 = document.createElement("input");
+      child10.type = "checkbox";
+      child10.checked = array[i][10]
+      child10.id = "css" + i;
+      cell10.appendChild(child10);
+
+      let cell11 = newRow.insertCell(-1);
+      let child11 = document.createElement("input");
+      child11.type = "checkbox";
+      child11.checked = array[i][11]
+      child11.id = "portfolio" + i;
+      cell11.appendChild(child11);
+
+      let cell12 = newRow.insertCell(-1);
+      let child12 = document.createElement("input");
+      child12.type = "url";
+      child12.value = array[i][12]
+      child12.id = "link" + i;
+      cell12.appendChild(child12);
+
+      let cell13 = newRow.insertCell(-1);
+      let child13 = document.createElement("select");
+
+      let option1 = document.createElement("option");
+      option1.value = "Accepted";
+      option1.text = "Accepted";
+      child13.appendChild(option1);
+
+      let option2 = document.createElement("option");
+      option2.value = "Accepted, Denied into Program";
+      option2.text = "Accepted, Denied into Program";
+      child13.appendChild(option2)
+
+      let option3 = document.createElement("option");
+      option3.value = "Denied";
+      option3.text = "Denied";
+      child13.appendChild(option3)
+
+      let option4 = document.createElement("option");
+      option4.value = "Waitlisted";
+      option4.text = "Waitlisted";
+      child13.appendChild(option4)
+
+      let option5 = document.createElement("option");
+      option5.value = "Waitlisted, Accepted";
+      option5.text = "Waitlisted, Accepted";
+      child13.appendChild(option5)
+
+      let option6 = document.createElement("option");
+      option6.value = "Waitlisted, Denied";
+      option6.text = "Waitlisted, Denied";
+      child13.appendChild(option6)
+
+      let option7 = document.createElement("option");
+      option7.value = "Deferred";
+      option7.text = "Deferred";
+      child13.appendChild(option7)
+
+      let option8 = document.createElement("option");
+      option8.value = "Incomplete";
+      option8.text = "Incomplete";
+      child13.appendChild(option8)
+
+      child13.value = array[i][13]
+      child13.id = "result" + i;
+      cell13.appendChild(child13);
+    }
+    push.style.display = "block";
+  }
+
+  function killTheKids(div){
+    while (div.firstChild) {
+        div.removeChild(div.firstChild);
+    }
+    return;
+  }
+
+  function printBox(name, classYear, advisorId, sfId, fullJson, iteration) {
+    contactArray.push(fullJson);
+    let contactOption = document.createElement("div");
+    contactOption.setAttribute("position", iteration);
+    contactOption.classList.add("contact");
+    contactOption.id = sfId;
+
+    let nameItem = document.createElement("p");
+    let nameItemNode = document.createTextNode("Name: " + name);
+    nameItem.appendChild(nameItemNode);
+    contactOption.appendChild(nameItem);
+
+    let classYearItem = document.createElement("p");
+    let classYearItemNode = document.createTextNode("Class Year: " + classYear);
+    classYearItem.appendChild(classYearItemNode);
+    contactOption.appendChild(classYearItem);  
+
+    let advisorItem = document.createElement("p");
+    let advisorItemNode = document.createTextNode("Advisor: " + getAdvisor(advisorId));
+    advisorItem.appendChild(advisorItemNode);
+    contactOption.appendChild(advisorItem);
+
+    resultBox.appendChild(contactOption)
+  }
+
+  // Placeholder function
+  function printResults(json) {
+    hideSpinner();
+    for (let i = 0; i < json.length; i++) {   
+      printBox(json[i].Name, json[i].Class_Year__c, json[i].Client_Advisor__c, json[i].Id, json[i], i)
+    }
+    activateOptions();
+  }
+
+var loadingDiv = document.getElementById('loading');
+
+function showSpinner() {
+  loadingDiv.style.visibility = 'visible';
+}
+
+function hideSpinner() {
+  loadingDiv.style.visibility = 'hidden';
+}
 </script>
