--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <base target="_top">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <?!= include("page-css"); ?>
   </head>
   <body>
+    <button id="back" style="display:none"><</button>
     <div class="header">
-      <img src="https://lh3.googleusercontent.com/XAv42v7Xsgu_24vDoCpdDfSVsCkb-Izmx7UjjqPgzoTYbN4ZMhbXfNbi-PVc3KyzI7ZoStL9mzB0e-TINg4foPvID73OqMoINFkKYKc3_JNNFlzJL4kVdXGBNNNEjiEN5ZN9DVFj3g=w600-h315-p-k" />
-      <br>
+      <img src="https://lh3.googleusercontent.com/uUmO46OEXIPsx3xffq-YWiAS2S7Hb5HnXA2TvpM1rdYffQrDizLpcvLE_u6jWNIUX2M3DFtrElH48Jkl_lHhFmFSy_nNTe8F84AxJ7pJdnTDkKZi9-6KrXaBcJ-aYR09NiNuxg8C9A=w2400"></img>
       <div id="authenticate">
         <h3>Click here to authorize this app with Salesforce.</h3>
         <a id="auth" href="" target="_blank">Authorize</a>
@@ -15,7 +16,8 @@
       </div>
     </div>
     <div class="searchBox">
-      <input type="text" id="searchTerm"></input>
+      <label for="searchTerm">Find your student:</label><br>
+      <input type="text" id="searchTerm" placeholder="Jane Doe"></input>
       <button id="searchButton" onClick="showSpinner()">Search</button>
     </div>
 
@@ -33,31 +35,49 @@
       <p>Superscored ACT: </p>
 
     </div>
-    <table id="applications" style="width:100%">
-      <tr>
-        <th>School Name</th>
-        <th>Due Date</th>
-        <th>Submitted?</th>
-        <th>Application Type</th>
-        <th>Common App Essay Completed?</th>
-        <th>Supplemental Essays Completed?</th>
-        <th>Testing Sent</th>        
-        <th>Transcripts Sent?</th>
-        <th>LORs Sent?</th>
-        <th>FAFSA Sent?</th>
-        <th>CSS Sent?</th>
-        <th>Portfolio Sent?</th>
-        <th>Portfolio Link</th>          
-        <th>Result</th>
-      </tr>
-      <tr>
-        <td id="plus"><button>New Application</button></td>
-      </tr>
-    </table>
-    <div id="schoolSearch" style="display:none">
-      <input id="schoolName" type="text"></input>
-      <button id="findSchool">Find School</button>
-    </div>
+  
+      <table id="applications" class="table table-striped table-sm">
+        <tr>
+          <th scope="col">School</th>
+          <th scope="col">Due Date</th>
+          <th scope="col">Submitted</th>
+          <th scope="col">App Type</th>
+          <th scope="col">CA Essay Done?</th>
+          <th scope="col">Supp Essays Done</th>
+          <th scope="col" id="test">Testing<p>ACT/SAT/Optional/Writing</p></th>        
+          <th scope="col">Transcripts Done</th>
+          <th scope="col">LORs Done</th>
+          <th scope="col">FAFSA Done</th>
+          <th scope="col">CSS Done</th>
+          <th scope="col">Portfolio Sent?</th>
+          <th scope="col">Portfolio Link</th>          
+          <th scope="col">Result</th>
+        </tr>
+        <tr>
+          <td> 
+            <div id="plus">
+              <button>New Application</button>
+            </div>
+            <div id="schoolSearch" style="display:none">
+              <input id="schoolName" type="text" placeholder="Blue Mountain State U"></input>
+              <button id="findSchool">Go</button>
+            </div>
+          </td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </table>
     <div id="schoolResults"></div>
     <button id="push" style="display:none">Push to Salesforce</button>
     <?!= include("page-js"); ?>
